<resources>
    <string name="app_name">QuotesKotlin</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="todo">TODO</string>
    <string name="genius_is_one_percent_inspiration_and_ninenty_nine_percent_perspiration">Genius is one percent inspiration and ninenty -nine percent perspiration</string>
    <string name="abhi_abhi_shek">abhi abhi shek</string>
</resources>