<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvQuotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="QOUTIFY"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQuotes"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:src="@drawable/quote" />

        <TextView
            android:id="@+id/quoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/genius_is_one_percent_inspiration_and_ninenty_nine_percent_perspiration"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/quoteAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:text="@string/abhi_abhi_shek"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLinear"
        android:layout_alignEnd="@+id/layoutLinear"
        android:layout_marginTop="-25dp"
        android:backgroundTint="#697369"
        android:contentDescription="@string/todo"
        android:src="@drawable/share"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/back_arrow"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


</RelativeLayout>